@@ -13,7 +13,7 @@ JEDIT 2.5 VERSION HISTORY
 
 + Enhancements
 
-- 'Go to End Of Indent' command removed (just use HOME instead); shortcut
+- 'Go to End Of Indent' command removed (just press HOME instead); shortcut
   of 'Indent Selected Lines' changed to C+i
 - 'Create new java file' and 'Create new java applet' macros added
   (Valery Kondakoff)
@@ -23,6 +23,7 @@ JEDIT 2.5 VERSION HISTORY
 - Many dialog boxes tweaked to comply with Java look & feel guidelines;
   as a result they look better
 - Improved 'Send' command error handling
+- Documentation updates
 
 + Bug Fixes
 
@@ -40,6 +41,7 @@ JEDIT 2.5 VERSION HISTORY
   throw an IllegalArgumentException and hang jEdit (since 2.5pre1)
 - Buffer._read() called setDirty() in a non-threadsafe way, this could
   cause problems with buffer tabs for example (since 2.5pre1)
+- Removed useless debug message displayed when going into background mode
 
 * Version 2.5pre4
 
